name:                backend
version:             0.1.0.0
license:             OtherLicense
license-file:        LICENSE
author:              Sam Tay
maintainer:          sam.chong.tay@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable backend
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:
      base >=4.9 && <4.11
    , acid-state
    , common
    , containers
    , http-types
    , mtl
    , safecopy
    , text
    , wai
    , wai-websockets
    , warp
    , websockets
