name:                backend
version:             0.1.0.0
license:             OtherLicense
license-file:        LICENSE
author:              Sam Tay
maintainer:          sam.chong.tay@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:
    Backend.App
    Backend.Data
    Backend.Main
    Backend.Server
  build-depends:
      base >=4.9 && <4.11
    , acid-state
    , aeson
    , common
    , containers
    , http-types
    , lens
    , mtl
    , safecopy
    , stm
    , text
    , wai
    , wai-app-static
    , wai-websockets
    , warp
    , websockets

executable backend
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  default-language:    Haskell2010
  build-depends:
      base >=4.9 && <4.11
    , backend

test-suite test-backend
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  ghc-options:          -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:       test
  default-language:     Haskell2010
  build-depends:
      base >=4.9 && <4.11
    , acid-state
    , backend
    , common
    , containers
    , hspec
    , lens
    , mtl
    , stm
    , text
