name:                common
version:             0.1.0.0
license:             OtherLicense
license-file:        LICENSE
author:              Sam Tay
maintainer:          sam.chong.tay@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall -O2
  exposed-modules:     Common.Types
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:
      base >=4.9 && <4.11
    , aeson
    , text
