name:                frontend
version:             0.1.0.0
license:             OtherLicense
license-file:        LICENSE
author:              Sam Tay
maintainer:          sam.chong.tay@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable frontend
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.11
                     , clay
                     , common
                     , containers
                     , jsaddle-warp
                     , reflex
                     , reflex-dom
                     , reflex-dom-core
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
