name:                frontend
version:             0.1.0.0
license:             OtherLicense
license-file:        LICENSE
author:              Sam Tay
maintainer:          sam.chong.tay@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable frontend
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:
      base >=4.9 && <4.11
    , clay
    , common
    , containers
    , reflex
    , reflex-dom
    , text
  if !os(android-linux)
    build-depends:
        jsaddle-warp
      , reflex-dom-core
